fix sonar coverage